--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^16.0.1",
     "koa": "^2.13.0",
     "koa-router": "^9.4.0",
+    "mongodb": "^4.8.1",
+    "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
     "sucrase": "^3.25.0"
   },
