--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/developmentOneZero/fileteste#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "koa": "^2.13.0",
+    "koa-body": "^5.0.0",
+    "koa-json": "^2.0.2",
     "koa-router": "^9.4.0",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
