--- a/backend/package.json
+++ b/backend/package.json
@@ -23,18 +23,23 @@
   "homepage": "https://bitbucket.org/developmentOneZero/fileteste#readme",
   "dependencies": {
     "@koa/cors": "^3.3.0",
+    "and": "^0.0.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
     "koa-body": "^5.0.0",
+    "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^4.0.3",
     "koa-router": "^9.4.0",
     "koa2-cors": "^2.0.6",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
-    "sucrase": "^3.25.0"
+    "sucrase": "^3.25.0",
+    "swagger2": "^3.0.1",
+    "swagger2-koa": "^3.0.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
